fixed drop shadow for readability

--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@
 	background-size: cover;
 	background-position: center;
 
-	text-shadow: 0 0 2px white;
+	text-shadow: 0 0 15px white;
 	
 	color:#1a1a1a;
 	font-family:"Open Sans",system-ui;
@@ -86,6 +86,9 @@
 	margin:0 0 0.5rem 0;
 	font-size:3rem;         		/* 48px */
     font-weight:800;
+
+	text-shadow: none;
+
 	line-height:1;
 	letter-spacing:0;
 	word-wrap:break-word;
